--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
   - build
 
 build:
-  stage: build # данная стейдж переписывает билд из основного пайплайна
+  stage: build # Данный стейдж переписывает билд из основного пайплайна
   rules:
     - if: '$SKIP_BUILD == "true"'
       when: always    # Если переменная установлена, выполняем наш job
